--- a/google_colab_facebook_phone_validator.ipynb
+++ b/google_colab_facebook_phone_validator.ipynb
@@ -6,8 +6,7 @@
       "name": "google_colab_facebook-phone-validator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNK9laoY1b4LTrKJbqUcICt",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyO3Ai3e8Urvq0Dge65gzx9s"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/albararamli/facebook-phone-validator/blob/master/google_colab_facebook_phone_validator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -44,7 +33,7 @@
         "import sys\n",
         "sys.path.insert(0,'/usr/lib/chromium-browser/chromedriver')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +173,7 @@
         "    if \"The password you’ve entered is incorrect.\" in y:\n",
         "        r=u+\" [found] \"\n",
         "        a=1\n",
-        "    if \"The email or phone number you’ve entered doesn’t match any account.\" in y or \"The phone number you’ve entered doesn’t match any account.\" in y:\n",
+        "    if \"is not associated with any Facebook account.\" in y or \"The email or phone number you’ve entered doesn’t match any account.\" in y or \"The phone number you’ve entered doesn’t match any account.\" in y:\n",
         "        r=u+\" [not found] \"\n",
         "        a=2\n",
         "    if a==0:\n",
@@ -198,7 +187,7 @@
         "f.close()\n",
         "r=\"\"\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
