--- a/google_colab_facebook_phone_validator.ipynb
+++ b/google_colab_facebook_phone_validator.ipynb
@@ -6,7 +6,8 @@
       "name": "google_colab_facebook-phone-validator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO3Ai3e8Urvq0Dge65gzx9s"
+      "authorship_tag": "ABX9TyO3Ai3e8Urvq0Dge65gzx9s",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/albararamli/facebook-phone-validator/blob/master/google_colab_facebook_phone_validator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
