--- a/google_colab_facebook_phone_validator.ipynb
+++ b/google_colab_facebook_phone_validator.ipynb
@@ -6,7 +6,7 @@
       "name": "google_colab_facebook-phone-validator.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP2f/C0zapPSzCE/GXvV64y",
+      "authorship_tag": "ABX9TyO7dVvcydLmXji1gKLlc0Ai",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "am5jOX_f6_TE",
         "colab_type": "code",
-        "outputId": "584e7623-8686-4c05-c851-b36bfa1b85bf",
+        "outputId": "9ed61af2-fb8e-4992-8679-9cbbc39a5ae0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
@@ -112,7 +112,6 @@
         "options.add_argument('--no-sandbox')\n",
         "options.add_argument('--disable-dev-shm-usage')\n",
         "options.add_argument('window-size=1200x600')\n",
-        "\n",
         "f = open(\"list.csv\", \"a\")\n",
         "driver = webdriver.Chrome('chromedriver',options=options) \n",
         "sleep(1) \n",
@@ -150,28 +149,31 @@
         "    if \"The password you’ve entered is incorrect.\" in y:\n",
         "        r=u+\" [found] \"\n",
         "        a=1\n",
-        "    if \"is not associated with any Facebook account.\" in y or \"The email or phone number you’ve entered doesn’t match any account.\" in y or \"The phone number you’ve entered doesn’t match any account.\" in y or \"Invalid username or password\" in y:\n",
+        "    if \"is not associated with any Facebook account.\" in y or \"The email or phone number you’ve entered doesn’t match any account.\" in y or \"The phone number you’ve entered doesn’t match any account.\" in y:\n",
         "        r=u+\" [not found] \"\n",
         "        a=2\n",
+        "    if \"Invalid username or password\" in y:\n",
+        "        r=u+\" [Invalid] \"\n",
+        "        a=3\n",
         "    if a==0:\n",
         "        r=u+\" [Unknown] \"\n",
         "    t2 = time.time()\n",
         "    r=r+\"- \"+str(round(t2-t1,1))\n",
         "    print(r)\n",
-        "    if a==1:\n",
+        "    if a!=2:\n",
         "        f.write(u+\"\\n\")\n",
         "driver.quit() \n",
         "f.close()\n",
         "r=\"\"\n"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "+218925122310 [not found] - 5.4\n",
-            "+218925122410 [not found] - 4.5\n",
-            "+218925122510 [not found] - 4.7\n"
+            "+218925122310 [not found] - 5.5\n",
+            "+218925122410 [not found] - 4.7\n",
+            "+218925122510 [not found] - 4.5\n"
           ],
           "name": "stdout"
         }
